<?xml version="1.0"?>
<package format="3">
  <name>serial_bridge</name>
  <version>1.0.0</version>
  <description>Serial bridge between ROS2 and ESP32 motor controller</description>
  <maintainer email="user@robot.local">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>